--- a/assets/scss/_index.scss
+++ b/assets/scss/_index.scss
@@ -1,3 +1,67 @@
 * {
   // background-color: red;
+  // transition: all 0.9s ease;
+}
+.container > div{
+  display: flex;
+  flex-wrap: wrap;
+  // transition: all 0.9s ease;
+}
+.top {
+  // display: flex;
+  // transition: all 0.9s ease;
+  article, img{
+    width: 100%;
+  }
+  img {
+    height: 200px;
+    object-fit: cover;
+  }
+  article {
+    // transition: all 0.9s ease;
+    position: relative;
+    overflow: hidden;
+    & > div{
+      transition: all 0.3s ease;
+      
+      position: absolute;
+      bottom: 0px;
+      width: 100%;
+      // height: 100%;
+      background: $color-on-pict;
+      padding: 6px;
+      // bottom: -50%;
+      //top: 50%;
+      // left: 50%;
+      transform: translateY(100%);
+
+      & > p{
+        color: $color-black;
+        font-size: $date-font-size;
+      }
+      & > p.title {
+        padding-top: 6px;
+        font-size: $title-font-size;
+      }
+    }
+    &:hover{
+      & > div {
+        // bottom: 0;
+        transform: translateY(0%);
+        // opacity: 0;
+      }
+    }
+  }
+}
+.w-type-1 {
+  width: 100%;
+}
+.w-type-2 {
+  width: 50%;
+}
+.w-type-3 {
+  width: 25%;
+}
+.w-type-4 {
+  width: 20%;
 }
