--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,2 +1,7 @@
 $color-black: #333;
 $color-lightgray: #eee;
+
+$color-on-pict: rgba(230, 230, 230, 0.7);
+
+$title-font-size: 20px;
+$date-font-size: 12px
