--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -1,3 +1,138 @@
 body {
-  background-color: $color-lightgray;
+  background-color: $color-base-white;
+}
+.container {
+  max-width: $break-point-large;
+  // text-align: center;
+  margin: auto;
+  // @include larger-media {
+    padding-top: 70px;
+  // }
+}
+header {
+  @include smaller-media {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    width: calc(100% - 41px);
+  }
+  @include larger-media{
+    width: 100%;
+  }
+  padding: 20px;
+  border-bottom: $color-black;
+  height: 70px;
+  position: fixed;
+  background: $color-base-white;
+  z-index: 9;
+
+  .header-title {
+    text-align: center;
+    p, a, h1{
+      font-size: 1.6rem;
+    }
+  }
+
+  @include larger-media{
+    #nav-content > ul > li {
+      padding: 20px 10px 10px;
+    }
+    nav{
+      position: relative;
+      padding: 8px 0px;
+
+      .nav-unshown{
+        display: none;
+      }
+
+      /*閉じる用の薄黒カバー*/
+      #nav-close {
+        display: none;/*はじめは隠しておく*/
+        position: fixed;
+        z-index: 101;
+        top: 0;/*全体に広がるように*/
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: black;
+        opacity: 0;
+        transition: .3s ease-in-out;
+      }
+
+      #nav-content {
+        overflow: auto;
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 9999;/*最前面に*/
+        width: 90%;/*右側に隙間を作る（閉じるカバーを表示）*/
+        max-width: 330px;/*最大幅（調整してください）*/
+        height: 100%;
+        background: #fff;/*背景色*/
+        transition: .3s ease-in-out;/*滑らかに表示*/
+        -webkit-transform: translateX(-105%);
+        transform: translateX(-105%);/*左に隠しておく*/
+      }
+
+      /*チェックが入ったらもろもろ表示*/
+      #nav-input:checked ~ #nav-close {
+        display: block;/*カバーを表示*/
+        opacity: .5;
+      }
+
+      #nav-input:checked ~ #nav-content {
+        -webkit-transform: translateX(0%);
+        transform: translateX(0%);/*中身を表示（右へスライド）*/
+        box-shadow: 6px 0 25px rgba(0,0,0,.15);
+      }
+
+      #nav-open {
+        display: inline-block;
+        width: 30px;
+        height: 22px;
+        vertical-align: middle;
+        position: absolute;
+        top: -20px;
+
+
+        span, span::before, span::after{
+          position: absolute;
+          height: 3px;
+          width: 25px;
+          border-radius: 3px;
+          background: #555;
+          display: block;
+          content: '';
+          cursor: pointer;
+        }
+        span::before {
+          bottom: -8px;
+        }
+        span::after{
+          bottom: -16px;
+        }
+      }
+    }
+  }
+
+  @include smaller-media{
+    nav {
+    width: 55%;
+
+      input, label{
+        display: none;
+      }
+
+      ul {
+        display: flex;
+        justify-content: flex-end;
+
+        li {
+          margin-left: 5%;
+          border-bottom: 2px solid transparent;
+          font-size: 1.2rem;
+        }
+      }
+    }
+  }
 }
