--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,5 +1,6 @@
 $color-black: #333;
 $color-lightgray: #eee;
+$color-base-white: #fff;
 
 $color-on-pict: rgba(230, 230, 230, 0.7);
 
@@ -24,6 +25,18 @@ $break-point-large: 960px;
 
 @mixin large-media {
   @media screen and (max-width: $break-point-large) and (min-width: $break-point-medium) {
+    @content
+  }
+}
+
+@mixin smaller-media {
+  @media screen and (min-width: $break-point-large) {
+    @content
+  }
+}
+
+@mixin larger-media {
+  @media screen and (max-width: $break-point-large) {
     @content
   }
 }
