--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -1,27 +1,119 @@
 body {
   background-color: $color-base-white;
 }
+section a {
+  color: $link-text;
+  text-decoration: none;
+  &:hover{
+    text-decoration: underline;
+  }
+}
 .container {
   max-width: $break-point-large;
-  // text-align: center;
   margin: auto;
-  // @include larger-media {
-    padding-top: 70px;
-  // }
+  padding-top: $header-height;
 }
+.slug {
+  & > *{
+    padding: 12px 0px;
+  }
+  p, li {
+    line-height: 20px;
+  }
+}
+div.md { 
+  p {
+    padding-bottom: 8px;
+  }
+  hr {
+    margin: 20px;
+    color: $color-lightgray2;
+  }
+  strong {
+    font-weight: bold;
+  }
+  ul
+  {
+    margin-bottom: 12px;
+  }
+  ul li{
+    list-style-type:none !important;
+    list-style-image:none !important;
+    margin: 5px 0px 5px 0px !important;
+  }
+  
+  ul li{
+    position:relative;
+    padding-left:20px;
+  }
+  
+  ul li:before{
+    content:''; 
+    display:block; 
+    position:absolute; 
+    box-shadow: 0 0 2px 2px rgba(255,255,255,0.2) inset;
+    top:3px; 
+    left:2px; 
+    height:0; 
+    width:0; 
+    border-top: 6px solid transparent;
+    border-right: 7px solid transparent;
+    border-bottom: 6px solid transparent;
+    border-left: 9px solid #aaa;
+  }
+}
+
+@include larger-media{
+  section.slug.container{
+    padding-left: $padding-right-left-sp;
+    padding-right: $padding-right-left-sp;
+  }
+}
+
+@keyframes show{
+  from{
+      opacity: 0;
+  }
+  to{
+      opacity: 0.5;
+  }
+}
+
+.eyecatch{
+  width: 100%;
+  margin: auto;
+  display: block;
+  max-height: 850px;
+  object-fit: cover;
+}
+h2 {
+  // padding: 12px 0px;
+  font-size: 24px;
+}
+h3{
+  margin: 12px auto;
+  padding: 6px 6px;
+  border-left: solid 3px $h3-border;
+  background: $h3-background;
+}
+code {
+  background: $color-lightgray;
+  padding: 0px 3px;
+}
+
 header {
   @include smaller-media {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
-    width: calc(100% - 41px);
+    width: calc(100% - 0px);
   }
   @include larger-media{
     width: 100%;
   }
   padding: 20px;
   border-bottom: $color-black;
-  height: 70px;
+  height: $header-height;
   position: fixed;
   background: $color-base-white;
   z-index: 9;
@@ -47,17 +139,23 @@ header {
       }
 
       /*閉じる用の薄黒カバー*/
-      #nav-close {
+      .nav-close-common {
         display: none;/*はじめは隠しておく*/
         position: fixed;
         z-index: 101;
-        top: 0;/*全体に広がるように*/
         left: 0;
         width: 100%;
-        height: 100%;
         background: black;
         opacity: 0;
-        transition: .3s ease-in-out;
+        transition: .3s ease-in-out; 
+      }
+      #nav-close {
+        top: 0;
+        height: $header-height;
+      }
+      #nav-close2 {
+        top: $header-height;
+        height: calc(100% - #{$header-height});
       }
 
       #nav-content {
@@ -66,25 +164,32 @@ header {
         top: 0;
         left: 0;
         z-index: 9999;/*最前面に*/
-        width: 90%;/*右側に隙間を作る（閉じるカバーを表示）*/
-        max-width: 330px;/*最大幅（調整してください）*/
-        height: 100%;
+        width: 100%;
+        height: 100px;
         background: #fff;/*背景色*/
-        transition: .3s ease-in-out;/*滑らかに表示*/
-        -webkit-transform: translateX(-105%);
-        transform: translateX(-105%);/*左に隠しておく*/
+        transition: .3s ease-in-out;
+        -webkit-transform: translateY(calc(-105% - #{$header-height}));
+        transform: translateY(calc(-105% - #{$header-height}));
       }
 
       /*チェックが入ったらもろもろ表示*/
-      #nav-input:checked ~ #nav-close {
-        display: block;/*カバーを表示*/
-        opacity: .5;
+      #nav-input:checked{
+        & ~ .nav-close-common{
+          display: block;
+        }
+        & ~ #nav-close{
+          opacity: 0;
+        }
+        & ~ #nav-close2{
+          animation: show 0.3s ease-in-out 0s;
+          opacity: 0.5;
+        }
       }
 
       #nav-input:checked ~ #nav-content {
-        -webkit-transform: translateX(0%);
-        transform: translateX(0%);/*中身を表示（右へスライド）*/
-        box-shadow: 6px 0 25px rgba(0,0,0,.15);
+        -webkit-transform: translateY(calc(0% + #{$header-height}));
+        transform: translateY(calc(0% + #{$header-height}));
+        border-top: solid 1px $color-lightgray;
       }
 
       #nav-open {
