--- a/assets/scss/_index.scss
+++ b/assets/scss/_index.scss
@@ -35,7 +35,7 @@
   }
   section:not(.top-img-section) > p {
     font-size: 2rem;
-    padding: 20px 0px;
+    padding: $padding-right-left-sp 0px;
     text-align: center;
     margin: auto;
     width: 100%;
