--- a/assets/scss/_work.scss
+++ b/assets/scss/_work.scss
@@ -1,26 +1,4 @@
 .slug{
-  & > *{
-    padding: 12px 0px;
-  }
-  p, li {
-    line-height: 20px;
-  }
-  div.md p {
-    padding-bottom: 8px;
-  }
-  .eyecatch{
-    width: 100%;
-    margin: auto;
-    display: block;
-    max-height: 850px;
-    object-fit: cover;
-  }
-  h2{
-    font-size: 24px;
-  }
-  h3{
-    padding-bottom: 6px;
-  }
   .right {
     float: right;
   }
@@ -51,12 +29,18 @@
   }
   .row-li{
     display: flex;
+    flex-wrap: wrap;
 
     li{
+      margin-right: 3px;
+    }
+  }
+  .gray-li{
+    li {
+      background-color: $color-lightgray;
       padding: 3px 6px;
       border-radius: 6px;
-      background-color: $color-lightgray;
-      margin-right: 6px;
+      margin-bottom: 6px;
     }
   }
 }
