--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -257,3 +257,12 @@ header {
 footer {
   text-align: center;
 }
+
+.page-enter-active,
+.page-leave-active {
+  transition: opacity 0.5s;
+}
+.page-enter,
+.page-leave-to {
+  opacity: 0;
+}
