--- a/assets/scss/_index.scss
+++ b/assets/scss/_index.scss
@@ -106,3 +106,22 @@
     filter: blur(0px);
   }
 }
+
+.not-display-before-load{
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.9s linear;
+
+  /*p {
+    visibility: hidden;;
+  }*/
+}
+.not-display-before-load.loaded{
+  visibility: visible;
+  opacity: 1;
+
+  /*p {
+    visibility: visible;;
+  }*/
+}
+
