--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -138,7 +138,13 @@ header {
   // スマホハンバーガーメニュー
   @include larger-media{
     #nav-content > ul > li {
-      padding: 20px 10px 10px;
+      // padding: 20px 10px 10px;
+      a {
+        width: 100%;
+        height: 100%;
+        display: block;
+        padding: 20px 10px 10px;
+      }
     }
     nav{
       position: relative;
