--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -24,7 +24,7 @@ section a {
     }
   }
 }
-div.md { 
+div.md {
   p {
     padding-bottom: 8px;
     @include larger-media{
@@ -47,21 +47,21 @@ div.md {
     list-style-image:none !important;
     margin: 5px 0px 5px 0px !important;
   }
-  
+
   ul li{
     position:relative;
     padding-left:20px;
   }
-  
+
   ul li:before{
-    content:''; 
-    display:block; 
-    position:absolute; 
+    content:'';
+    display:block;
+    position:absolute;
     box-shadow: 0 0 2px 2px rgba(255,255,255,0.2) inset;
-    top:3px; 
-    left:2px; 
-    height:0; 
-    width:0; 
+    top:3px;
+    left:2px;
+    height:0;
+    width:0;
     border-top: 6px solid transparent;
     border-right: 7px solid transparent;
     border-bottom: 6px solid transparent;
@@ -163,7 +163,7 @@ header {
         width: 100%;
         background: black;
         opacity: 0;
-        transition: .3s ease-in-out; 
+        transition: .3s ease-in-out;
       }
       #nav-close {
         top: 0;
@@ -254,6 +254,10 @@ header {
           margin-left: 5%;
           border-bottom: 2px solid transparent;
           font-size: 1.2rem;
+
+          a:not(:hover){
+            text-decoration: none;
+          }
         }
       }
     }
